--- a/ue4/HMI/HMI.uproject
+++ b/ue4/HMI/HMI.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "HMI",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG",
+				"Engine"
+			]
 		}
 	]
 }
