Created Main level in project. Changed default project settings.

--- a/ue4/HMI/Config/DefaultEngine.ini
+++ b/ue4/HMI/Config/DefaultEngine.ini
@@ -11,3 +11,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/HMI")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="HMIGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/HMI/Core/BP_HMIGameMode.BP_HMIGameMode_C
+EditorStartupMap=/Game/HMI/Maps/Main.Main
+GameDefaultMap=/Game/HMI/Maps/Main.Main
+
